Adding JavaScript functionality and fixing CSS

--- a/index.html
+++ b/index.html
@@ -8,12 +8,7 @@
   <!-- google font apis -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat|Ubuntu" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&family=Pinyon+Script&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Charm:wght@400;700&family=Covered+By+Your+Grace&family=Pinyon+Script&family=VT323&display=swap" rel="stylesheet">
 
   <!-- bootstrap -->
@@ -39,7 +34,7 @@
 
 
     <div>
-      <h1 class="heading">Refresh Me</h1>
+      <a href="#" onclick="refreshFunction();" ><h1 class="heading">Refresh Me</h1></a>
 
     </div>
 
@@ -47,12 +42,12 @@
 
       <div class="col-lg-6 players">
         <h3>Player 1</h3>
-        <img class="dice-img" src="images/dice6.png" alt="dice-img-6">
+        <img class="img1 dice-img" src="images/dice6.png" alt="dice-img-6">
       </div>
 
       <div class="col-lg-6 players">
         <h3>Player 2</h3>
-        <img class="dice-img" src="images/dice6.png" alt="dice-img-6">
+        <img class="img2 dice-img" src="images/dice6.png" alt="dice-img-6">
       </div>
 
     </div>
@@ -64,15 +59,15 @@
     <div class="container-fluid">
 
 
-    <ion-icon class="social-icon" name="logo-facebook"></ion-icon>
-    <ion-icon class="social-icon" name="logo-instagram"></ion-icon>
-    <ion-icon class="social-icon" name="mail-outline"></ion-icon>
-    <p>© Copyright Usama Pal</p>
+      <ion-icon class="social-icon" name="logo-facebook"></ion-icon>
+      <ion-icon class="social-icon" name="logo-instagram"></ion-icon>
+      <ion-icon class="social-icon" name="mail-outline"></ion-icon>
+      <p>© Copyright Usama Pal</p>
 
-  </div>
+    </div>
 
   </footer>
-
+  <script src="index.js" charset="utf-8"></script>
 </body>
 
 </html>
