--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <div class="container-fluid">
 
 
-    <div>
+    <div class=mbl-heading>
       <a href="#" onclick="refreshFunction();" ><h1 class="heading">Refresh Me</h1></a>
 
     </div>
